# ecies-ed25519

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: encryption.rs  keys.rs  lib.rs
