[package]
name = "ecies-ed25519"
version = "0.5.1"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "ECIES on Twisted Edwards Curve25519 using AES-GCM and HKDF-SHA256"
categories = ["cryptography"]
keywords = ["ecies", "encryption", "ed25519", "curve25519", "aes-gcm"]
repository = "https://github.com/phayes/ecies-ed25519"
readme = "README.md"

[dependencies]
rand = "0.8.5"
curve25519-dalek = "4.1.1"
thiserror = "1.0.24"
hex = "0.4.3"
zeroize = "1.3.0"

# RustCrypto
aes-gcm = "0.10.3"
digest = "0.10.7"
hkdf = "0.12.3"
sha2 = "0.10.8"

# "serde" feature
serde = { version = "1.0.188", optional = true }

[dev-dependencies]
serde_cbor = "0.11.1"
serde_json = "1.0.64"
